--- a/.gitignore
+++ b/.gitignore
@@ -207,8 +207,7 @@ marimo/_lsp/
 __marimo__/
 
 .vscode
-# Cache file
-search_cache.pkl
-embeddings_log.txt
+# Data folder (cache and logs)
+data/
 features.txt
 prompt.txt
